# gradient-descent-visualizer

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
gd_visualizer/: objectives.py  optimizers.py  plotting.py  schedulers.py
