[project]
name = "gradient-descent-visualizer"
version = "0.1.0"
author = "Lars Heimann"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
        "numpy>=1.26",
        "pandas>=2.1",
        "plotly>=5.24",
        "streamlit>=1.38",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.8,<5",
    "ruff>=0.7,<1",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
line-ending = "lf"
